# stock-analyzer

./: .gitignore  USER_GUIDE.md  config.py  config.yaml  dashboard.py  docker-compose.yml  main.py  optimize.py  optimized_configs.yaml  requirements.txt  scan.py  scanner.py  sweep_subtype.py  watchlist_tickers.example.yaml
analysis/: analyzer.py  dividend.py  multi_timeframe.py  pattern_scorer.py  score_timeseries.py  scorer.py  support_resistance.py
backend/: .dockerignore  .env.example  Dockerfile  pyproject.toml  stock_analyzer.db
backend/app/: main.py
backend/app/api/routes/: auth.py  data.py  sections.py
backend/app/core/: config.py  database.py  security.py
backend/app/models/: __init__.py  schemas.py  strategy.py  user.py
backend/app/providers/: __init__.py  base.py  yahoo.py
backend/app/services/: auto_tuner.py  backtest.py  holdings_config.py  llm.py  ml_scoring.py  scanner.py  sectors.py  shared.py  strategy_library.py  tax_calculator.py  walk_forward.py
dashboard_pkg/: data_loading.py
data/: __init__.py  provider.py  yahoo.py
desktop/: app.py
display/: backtest_terminal.py  terminal.py
docs/: app-redesign.md
engine/: auto_tuner.py  backtest.py  dca.py  ml_features.py  ml_model.py  regime.py  score_strategy.py  strategy.py  suitability.py  ta_utils.py  walk_forward.py  watchlist.py
frontend/: .dockerignore  Dockerfile  package-lock.json  package.json
indicators/: __init__.py  adx.py  base.py  bollinger.py  fibonacci.py  macd.py  moving_averages.py  registry.py  rsi.py  stochastic.py  volume.py
models/: xgb_scaler.pkl  (+2 more)
(+44 files in other folders)
